deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-ws
  name: node-ws
spec:
  selector:
    matchLabels:
      app: node-ws
  replicas: 2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '80'
        prometheus.io/path: '/metrics'
      labels:
        app: node-ws
    spec:
      containers:
      - image: 293014077452.dkr.ecr.us-west-1.amazonaws.com/node-ws:latest
        imagePullPolicy: Always
        name: node-ws
        ports:
         - name: socket-port
           containerPort: 80
