deploy/service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-ws
  namespace: node-ws
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
    prometheus.io/path: '/metrics'
spec:
  selector:
    app: node-ws
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
