deploy/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: node-ws-service
  namespace: node-ws
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: node-ws
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
